# simple-ms-rust

./: .env  Cargo.toml  README.md
src/: api.rs  in_mem_order_store.rs  main.rs  mongodb_order_store.rs  order_store.rs
src/api/: health.rs  orders.rs  request.rs  response.rs
