[package]
name = "simple-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.17"
dotenv = "0.15.0"
env_logger = "0.9.3"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
test-context = "0.1.4"
